# fisjson

./: CMakeLists.txt  JsonDrawer.pro  Resources.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  printwidget.cpp  veri.json
include/: printwidget.h
src/: printwidget.cpp
ui/: printwidget.ui
